# ai-tutor

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: agent.py  assignments.py  courses.py  experiments.py  health.py  learning.py  runtime.py  settings.py
backend/app/core/: config.py  tenant.py
backend/app/db/: base.py  migrate.py  session.py
backend/app/models/: __init__.py  learning.py
backend/app/schemas/: __init__.py  agent.py  experiments.py  learning.py  runtime.py  settings.py
backend/app/services/: __init__.py  agent_service.py  experiment_runner.py  grading_service.py  learning_service.py  runtime_runner.py  runtime_settings_service.py  tutor_provider.py  tutor_settings_service.py  workspace_settings_store.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_learning_loop.py  0002_agent_sessions.py  0003_workspace_settings.py  0004_runtime_runs.py  0005_runtime_run_execution_fields.py
backend/tests/: conftest.py  test_agent_flow.py  test_experiments.py  test_health.py  test_learning_domain.py  test_learning_models.py  test_learning_service.py  test_runtime_settings.py  test_tutor_chat.py  test_tutor_provider_urls.py  test_tutor_settings.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: m1-teacher-loop.spec.ts
frontend/src/: App.tsx  app-routes.tsx  main.tsx
(+32 files in other folders)
