[project]
name = "ai-dream-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Dream local teacher agent platform."
requires-python = ">=3.11"
dependencies = [
  "alembic",
  "fastapi",
  "psycopg[binary]",
  "pydantic-settings",
  "sqlalchemy",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
